--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
 }
 
 .container {
-    width: 650px;
+    max-width: 650px;
     margin: auto;
 }
 
@@ -112,7 +112,7 @@ header {
 
 /* Modal Content */
 .modal-content {
-    width: 600px;
+    max-width: 600px;
     margin: auto;
     padding: 20px;
     display: flex;
