--- a/style.css
+++ b/style.css
@@ -66,18 +66,28 @@ nav {
     border: none;
     background: rgb(2, 0, 36);
     cursor: pointer;
+
+}
+
+#new-post:hover {
+    filter: drop-shadow(0 0 0 2px black);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
+
 
 .links {
     display: flex;
     justify-content: space-between;
 }
 
-header {
+.quote-div {
     /* height: 380px; */
-    padding-top: 100px;
-    /* background: url(img/pexels-athena-2582937.jpg); */
+    padding: 100px;
+    margin-bottom: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #777;
 }
 
 .container {
@@ -120,12 +130,12 @@ header {
     overflow: auto;
     /* Fallback color */
     background-color: rgb(0, 0, 0);
-    /* Black w/ opacity */
+    /* Black with opacity */
     background-color: rgba(0, 0, 0, 0.416);
+    /* Blur the Background*/
     backdrop-filter: blur(5px);
+    /* Add a drop shadow */
     filter: drop-shadow(0 0 0 2px white);
-
-
 }
 
 /* Modal Content */
@@ -135,32 +145,29 @@ header {
     padding: 20px;
     display: flex;
     background: rgba(0, 0, 0, 0.2);
-    border: 1px solid #888;
+    border: 1px solid #777;
     backdrop-filter: blur(100px);
-
-
 }
 
 /* The Close Button */
 .close {
-    color: #aaaaaa;
-    /* float: right; */
-    font-size: 78px;
+    color: #777;
+    justify-self: end;
+    font-size: 10px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: #fff;
     text-decoration: none;
-    cursor: pointer;
-
 }
 
 .fieldset {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border: none;
 }
 
 
