--- a/style.css
+++ b/style.css
@@ -167,8 +167,9 @@ nav {
 .close {
     color: #777;
     justify-self: end;
-    font-size: 10px;
+    font-size: 16px;
     font-weight: bold;
+    align-self: end;
 }
 
 .close:hover,
