--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
+    position: absolute;
     background-color: #202124;
     border-bottom: 1px solid #85B4F8;
 }
@@ -97,14 +97,16 @@ nav {
 }
 
 .links {
+    width: 300px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
 .quote-div {
     /* height: 380px; */
     padding: 100px;
-    margin-bottom: 65px;
+    /* margin-top: 65px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -146,7 +148,7 @@ nav {
     /* Stay in place */
     position: fixed;
     /* Sit on top */
-    /* z-index: 99999; */
+    z-index: 99999;
     /* Location of the box */
     padding-top: 100px;
     left: 0;
@@ -157,11 +159,11 @@ nav {
     height: 100%;
     /* Enable scroll if needed */
     overflow: auto;
-    /* Fallback color */
-    background-color: rgb(0, 0, 0);
     /* Black with opacity */
     background-color: rgba(0, 0, 0, 0.1);
-    /* Blur the Background*/
+    /* Fallback color */
+    background-color: rgb(0, 0, 0);
+    /* Blur the Background */
     backdrop-filter: blur(5px);
     /* Add a drop shadow */
     filter: drop-shadow(0 0 0 2px white);
@@ -175,7 +177,7 @@ nav {
     border-radius: 2%;
     display: flex;
     flex-direction: column;
-    background: #000;
+    background: rgb(0, 11, 43);
 }
 
 /* The Close Button */
@@ -326,6 +328,6 @@ select:focus {
     }
 
     .links {
-        display: none;
+        /* display: none; */
     }
 }
