--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position: fixed;
     background-color: #202124;
     border-bottom: 1px solid #85B4F8;
 }
