--- a/style.css
+++ b/style.css
@@ -351,6 +351,10 @@ select:focus {
         padding: 40px;
     }
 
+    .modal {
+        padding-top: 50px;
+    }
+
     .modal-content {
         padding: 30px 0;
         margin: 0 auto;
@@ -363,7 +367,7 @@ select:focus {
 
     .modal-content,
     .container {
-        width: 85%;
+        width: 95%;
     }
 
     .close {
